Add bar chart section for diabetes prevalence by state

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="#linegraph-section">Line Graph</a>
     <a href="#map-section">Map</a>
     <a href="#dotchart-section">Dot Chart</a>
+    <a href="#barchart-section">Bar Chart</a>
   </nav>
 
   <!-- Scatter Plot Section -->
@@ -71,6 +72,14 @@
     </p>
     <div id="dotchart" class="visualization"></div>
   </section>
+
+  <!-- bar chart section -->
+  <section id="barchart-section" class="visualization-section">
+    <h2>Diabetes Prevalence by State (2023)</h2>
+    <p>
+      This bar chart visualizes the calculated diabetes prevalence 
+    </p>
+    <div id="ageGroupChart" class="visualization"></div>
 
   <!-- External JavaScript -->
   <script src="script.js"></script>
