Update index.html to remove state selection and add show full chart button in the animation controls section

--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@
     <p>
       This line graph shows the trend of diabetes prevalence over time for different states in Malaysia from 2013 to 2023.
     </p>
-    <div class="filter-container">
-      <label for="state-select">Select States:</label><br>
-      <select id="state-select" multiple></select>
-    </div>
     <div class="animation-controls">
-      <button id="play">Play</button>
+      <button id="play" style="display: none;">Play</button>
       <button id="pause">Pause</button>
+      <button id="showFull">Show Full Chart</button>
+      
     </div>
     <div id="linegraph" class="visualization"></div>
   </section>
